src/sass/_menu-page.scss
@use 'baseline';
@use 'button';
@use 'functions';
@use 'list';
@use 'settings';
@use 'states';
@use 'typography';

.menu-page-container {
  flex-grow: 1;
  display: grid;
  grid-template-columns: functions.px-to-rem(30px) 1fr;
  grid-template-rows: 60px auto;
}

.site-header__close_nav {
  order: 1;
}

.site-header__nav {
  order: 2;
}

.menu-page-main-content {
  order: 3;
  grid-column: 1 / -1;
}

.navigation-menu {
  color: settings.$colour-white;
  background-color: settings.$colour-text-primary;
  width: 100%;
  font-family: settings.$font-family;
  padding-top: baseline.increments(2);
  padding-left: functions.px-to-rem(16px);
  padding-right: functions.px-to-rem(16px);
  display: flex;
  flex-direction: column;
}

.navigation-menu__links {
  @include list.basics();

}

.navigation-menu__link {
  @include typography.sizing(14px, 1.75);
  display: flex;
  align-items: center;
  min-height: baseline.increments(5);
  max-width: functions.px-to-rem(300px);
  background-size: functions.px-to-rem(24px);
  padding-left: functions.px-to-rem(36px);
  font-weight: bold;
  letter-spacing: 0.1px;

  &:link,
  &:visited {
    color: settings.$colour-white;

    &:hover,
    &:active {
      background-color: rgba(255, 255, 255, 0.1);
      color: inherit;
    }
  }
}

.navigation-menu__link--home {
  background: 0 baseline.increments(1) url('/static/images/home.svg') no-repeat;
}

.navigation-menu__link--about {
  background: 0 baseline.increments(1) url('/static/images/info.svg') no-repeat;
}

.navigation-menu__title {
  @include typography.sizing(20px, 3);
  font-weight: bold;
  letter-spacing: 0.14px;
  margin-bottom: baseline.increments(2.5);
}

.site-header__close_nav {
  align-self: center;

  &::before {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    user-select: none;
    content: 'Close the following menu';
  }
}

.navigation-menu__small_print {
  @include typography.sizing(12px, 2);
  letter-spacing: 0.09px;
  display: flex;
  flex-direction: column;

  a:link,
  a:visited {
    @include typography.sizing(12px, 2);
    color: settings.$colour-white;
    background-color: settings.$colour-text-primary;
    font-weight: normal;
    letter-spacing: 0.09px;
    text-decoration: underline;

    a:hover,
    a:active {
      color: inherit;
      background-color: inherit;
    }
  }
}

.navigation-menu__feedback_button {
  @include button.button-new();
  display: inline-block;
  margin-bottom: baseline.increments(3);
}

.navigation-menu__footer {
  margin-top: auto;
  margin-bottom: baseline.increments(2);
}

